# metal-testing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh
.github/: copilot-instructions.md
.github/workflows/: build-and-release.yml
data/: config.json
data/Shaders/: General.metal  Text.metal  Triangle.metal
depreciated/: Application.h
depreciated/MetalDelegates/: AppDelegate.cpp  ViewDelegate.h
depreciated/Renderable/UI/: FPSMonitor.h
depreciated/lib/Input/: InputState.h
depreciated/lib/LogManager/: LogManaager.cpp  LogManager.h
depreciated/lib/Utils/: Math.cpp  Math.h
depreciated/lib/View/: MeshFactory.h  MeshRenderer.h  PipelineFactory.h  Renderable.cpp  Renderable.h  UIContainer.cpp  UIElement.h  UIPrimitives.cpp
lib/: CMakeLists.txt
lib/FileReader/: CMakeLists.txt  FileReader.cpp
lib/LogManager/: CMakeLists.txt  LogManager.h
src/: Application.cpp  Application.h  config.h  main.cpp
src/Renderable/UI/: FPSMonitor.cpp  FPSMonitor.h
src/backend/glfw/: GLFWAdapter.h  GLFWAdapter.mm
src/components/engine/: Material.cpp  Material.h  Renderable.cpp  Renderable.h  Shader.cpp  Shader.h
src/controller/: Application.cpp  Application.h
src/controller/ui/: DebugMonitor.cpp  (+1 more)
src/core/: FontManager.cpp  FontManager.h  LogManager.cpp  LogManager.h
src/engine/: Camera.h  Engine.cpp  Engine.h  config.h
src/factories/: CircleFactory.h  MeshFactory.cpp  MeshFactory.h  PipelineFactory.cpp  PipelineFactory.h  RoundedRectangleFactory.h
src/systems/: MeshRenderer.cpp  MeshRenderer.h
src/utils/: FileReader.cpp  Math.cpp  Math.h  Path.cpp
(+150 files in other folders)
